crates/synapse-core/tests/snapshots/ocr_types__ocr_result_empty_round_trip.snap
---
source: crates/synapse-core/tests/ocr_types.rs
expression: "round_trip(\"OcrResult\", \"snapshot_empty\", empty_ocr_result())?"
---
{
  "full_text": "",
  "words": [],
  "confidence": 0.0,
  "confidence_source": "unsupported",
  "region": {
    "x": 0,
    "y": 0,
    "w": 0,
    "h": 0
  },
  "lang": "und"
}
