crates/synapse-core/tests/snapshots/ocr_types__ocr_result_full_round_trip.snap
---
source: crates/synapse-core/tests/ocr_types.rs
expression: "round_trip(\"OcrResult\", \"snapshot_full\", full_ocr_result())?"
---
{
  "full_text": "Synapse Ready",
  "words": [
    {
      "text": "Synapse",
      "bbox": {
        "x": 12,
        "y": 4,
        "w": 72,
        "h": 18
      },
      "confidence": 0.99,
      "confidence_source": "engine"
    },
    {
      "text": "Ready",
      "bbox": {
        "x": 92,
        "y": 4,
        "w": 72,
        "h": 18
      },
      "confidence": 0.88,
      "confidence_source": "engine"
    }
  ],
  "confidence": 0.935,
  "confidence_source": "engine",
  "region": {
    "x": 5,
    "y": 7,
    "w": 256,
    "h": 64
  },
  "lang": "en-US"
}
