crates/synapse-core/tests/snapshots/ocr_types__ocr_word_round_trip.snap
---
source: crates/synapse-core/tests/ocr_types.rs
expression: "round_trip(\"OcrWord\", \"snapshot\", full_ocr_word(\"Synapse\", 12, 4))?"
---
{
  "text": "Synapse",
  "bbox": {
    "x": 12,
    "y": 4,
    "w": 72,
    "h": 18
  },
  "confidence": 0.99,
  "confidence_source": "engine"
}
